charts/frontend/frontend-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-httproute
  namespace: frontend
spec:
  parentRefs:
  - name: frontend-gateway
  hostnames:
  - "frontend.local"
  rules:

  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-app
      port: 80
